// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94373.82458252949,
  "path": Array [
    StartEvent {
      "point": lon 6.9179704 lat 51.1276447,
      "time": 1500300414931.921,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2812555 lat 50.9890756,
      "time": 1500306179779.143,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1937559 lat 51.1722765,
      "time": 1500308464911.7659,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136420.85415876907,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 1500303056825.019,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829187 lat 50.9964595,
      "time": 1500305066358.2283,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941840 lat 51.1723441,
      "time": 1500306711548.8186,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075001 lat 50.9694915,
      "time": 1500308404130.9412,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 1500309550837.2542,
      "type": "finish",
    },
  ],
  "speed": 75.62583148774199,
  "time": 6494.0122351074215,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 1`] = `
Object {
  "completed": false,
  "distance": 52735.15992428783,
  "path": Array [
    StartEvent {
      "point": lon 6.9147855 lat 51.1378604,
      "time": 1500301028833.1543,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829187 lat 50.9964595,
      "time": 1500305066358.2283,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 2`] = `
Object {
  "completed": true,
  "distance": 136420.85415876907,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 1500303056825.019,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829187 lat 50.9964595,
      "time": 1500305066358.2283,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941840 lat 51.1723441,
      "time": 1500306711548.8186,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075001 lat 50.9694915,
      "time": 1500308404130.9412,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 1500309550837.2542,
      "type": "finish",
    },
  ],
  "speed": 75.62583148774199,
  "time": 6494.0122351074215,
}
`;
